--- a/Server/package.json
+++ b/Server/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "mvc",
+  "name": "chatflow-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for ChatFlow application",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["chat", "real-time", "mern"],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "18.x"
+  },
+
+  
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -19,7 +25,10 @@
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
+ 
