fix: add type module and remove deprecated mongo options

--- a/Server/package.json
+++ b/Server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chatflow-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend for ChatFlow application",
   "main": "index.js",
   "scripts": {
