--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "overrides": {
+  "core-js": "^3.38.1"
+}
+,
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
