--- a/Server/package.json
+++ b/Server/package.json
@@ -9,14 +9,16 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["chat", "real-time", "mern"],
+  "keywords": [
+    "chat",
+    "real-time",
+    "mern"
+  ],
   "author": "",
   "license": "ISC",
   "engines": {
     "node": "18.x"
   },
-
-  
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -32,4 +34,3 @@
     "nodemon": "^3.1.10"
   }
 }
- 
