--- a/Client/package.json
+++ b/Client/package.json
@@ -11,9 +11,8 @@
     "preview": "vite preview"
   },
   "overrides": {
-  "core-js": "^3.38.1"
-}
-,
+    "core-js": "^3.38.1"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -46,11 +45,12 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
-    "emoji-picker-react": "^4.10.0",
     "embla-carousel-react": "^8.6.0",
+    "emoji-picker-react": "^4.10.0",
     "framer-motion": "^12.23.22",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
