fix: complete mobile chat functionality
- Fixed hamburger menu and mobile sidebar
- Resolved double-tap zoom issues on mobile
- Fixed group chat selection on first tap
- Improved mobile responsiveness
- Enhanced touch event handling
- Fixed sidebar overlay and z-index issues
- Mobile and desktop chat now working properly

--- a/Server/.env.example
+++ b/Server/.env.example
@@ -3,3 +3,7 @@ MONGODB_URI="mongodb+srv://galok0079:sqDCeBMUVJJAXRj4@cluster1.tqtyfuo.mongodb.n
 PORT=3000
 
 JWT_SECRET=myStrongSecretkey2
+
+CLOUDINARY_CLOUD_NAME=dmaipjho2
+CLOUDINARY_API_KEY=177132279276223
+CLOUDINARY_API_SECRET=yTO6ftlHVOZKp_ZyuV5Fscf-zUE
