--- a/Client/package.json
+++ b/Client/package.json
@@ -91,6 +91,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
+    "@types/html2canvas": "^1.0.0",
     "vite": "^5.4.19"
   }
 }
